added ts ignore example, comment in readme

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "./node_modules/.bin/webpack --watch",
-    "build": "./node_modules/.bin/webpack",
+    "watch:webpack": "./node_modules/.bin/webpack --mode=development --watch",
+    "build": "./node_modules/.bin/webpack --mode=production",
     "lint": "./node_modules/.bin/eslint ./src/**/*.tsx",
     "pretty": "./node_modules/.bin/prettier --write --parser typescript --single-quote ./src/**/*.tsx",
     "test": "jest",
-    "check-types": "tsc",
+    "watch:tsc": "tsc --watch",
+    "tsc": "tsc --target es6",
+    "start": "./node_modules/.bin/npm-run-all --parallel watch:*",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -57,6 +59,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.3.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
