--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "emotion": "^10.0.9",
     "immer": "^2.1.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
